compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__pipes__block_expr_into_pipe.snap
---
source: compiler-core/src/erlang/tests/pipes.rs
expression: "fn id(a) { a }\npub fn main() {\n  {\n    let x = 1\n    x\n  }\n  |> id\n}"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/0]).

-spec id(W) -> W.
id(A) ->
    A.

-spec main() -> integer().
main() ->
    _pipe = begin
        X = 1,
        X
    end,
    id(_pipe).
