compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__pipes__pipe_in_call.snap
---
source: compiler-core/src/erlang/tests/pipes.rs
expression: "\npub fn main() {\n  123\n  |> two(\n    1 |> two(2),\n    _,\n  )\n}\n\npub fn two(a, b) {\n  a\n}\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([two/2, main/0]).

-spec two(Y, any()) -> Y.
two(A, B) ->
    A.

-spec main() -> integer().
main() ->
    _pipe = 123,
    two(
        begin
            _pipe@1 = 1,
            two(_pipe@1, 2)
        end,
        _pipe
    ).
