compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__pipes__pipe_in_eq.snap
---
source: compiler-core/src/erlang/tests/pipes.rs
expression: "fn id(x) {\n  x\n}\n        \npub fn main() {\n    1 == 1 |> id\n}"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/0]).

-spec id(W) -> W.
id(X) ->
    X.

-spec main() -> boolean().
main() ->
    1 =:= begin
        _pipe = 1,
        id(_pipe)
    end.
