compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__pipes__pipe_in_spread.snap
---
source: compiler-core/src/erlang/tests/pipes.rs
expression: "pub type X {\n  X(a: Int, b: Int)\n}\n\nfn id(x) {\n  x\n}\n        \npub fn main(x) {\n  X(..x, a: 1 |> id)\n}"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/1]).
-export_type([x/0]).

-type x() :: {x, integer(), integer()}.

-spec id(X) -> X.
id(X) ->
    X.

-spec main(x()) -> x().
main(X) ->
    erlang:setelement(
        2,
        X,
        begin
            _pipe = 1,
            id(_pipe)
        end
    ).
